# open-design-engine

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .npmignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  api-utils.py  cmake-gen.bat  generate-api-bindings.py  package.json  repo-check.py  vcpkg.json  version.cmake
.github/: dependabot.yml
ode-animation-prototype/: CMakeLists.txt  wasm-build.sh  window-main.cpp
ode-animation-prototype/docker/: .gitconfig  Dockerfile
ode-animation-prototype/npm/: example.html  package.json
ode-diagnostics/: CMakeLists.txt  ode-diagnostics.h
ode-diagnostics/diag/: graphviz.cpp  graphviz.h  octopus-builder.cpp  octopus-builder.h
ode-essentials/: CMakeLists.txt  ode-essentials.h
ode-essentials/ode/: api-base.cpp  api-base.h  emscripten-bindings.cpp  filesystem.h  geometry.h  graphics.h  math.h  utils.h
ode-essentials/ode/filesystem/: FilePath.cpp  FilePath.h  MemoryFileSystem.cpp  MemoryFileSystem.h  file-io.cpp  file-io.h
ode-essentials/ode/geometry/: Rectangle.h  Rectangle.hpp  RectangleMargin.h  RectangleMargin.hpp
ode-essentials/ode/graphics/: Bitmap.cpp  Bitmap.h  Bitmap.hpp  BitmapConstRef.h  BitmapConstRef.hpp  BitmapRef.h  BitmapRef.hpp  Color.h  FilterMode.h  SparseBitmapConstRef.h  SparseBitmapConstRef.hpp  SparseBitmapRef.h  SparseBitmapRef.hpp  bitmap-ops.cpp  bitmap-ops.h  pixel-format.h  pixel-format.hpp
ode-essentials/ode/math/: Matrix2x2.h  Matrix2x2.hpp  Matrix3x2.h  Matrix3x2.hpp  Matrix3x3.h  Matrix3x3.hpp  Vector2.h  Vector2.hpp  Vector3.h  Vector3.hpp
ode-essentials/ode/utility/: Result.h  Result.hpp  StringLiteral.h
ode-graphics/: CMakeLists.txt  ode-graphics.h
ode-graphics/ode/graphics/: FrameBuffer.cpp  FrameBuffer.h  GraphicsContext-emscripten.cpp  GraphicsContext-glfw.cpp  GraphicsContext-none.cpp  GraphicsContext.h  Mesh.cpp  Mesh.h  RenderBuffer.cpp  RenderBuffer.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture1D.cpp  Texture1D.h  Texture2D.cpp  Texture2D.h  Uniform.cpp  Uniform.h  gl-state-check.cpp  gl-state-check.h  gl.h
ode-logic/: CMakeLists.txt  animation-json-config.json  main.cpp  ode-logic.h
ode-logic/ode/: emscripten-bindings.cpp  logic-api.cpp  logic-api.h
ode-logic/ode/animation/: AnimationParser.cpp  AnimationParser.h  AnimationSerializer.cpp  AnimationSerializer.h  DocumentAnimation.h  animate.cpp  animate.h
ode-logic/ode/core/: ChannelMatrix.h  LayerBounds.h  LayerInstanceSpecifier.h  LayerMetrics.h  TransformationMatrix.cpp  TransformationMatrix.h  bounds-ops.cpp  bounds-ops.h  bounds.h  effect-margin.cpp  effect-margin.h  octopus-type-conversions.h  planar-intersections.cpp  planar-intersections.h
ode-logic/ode/design-management/: ChangeNotification.h  Component.cpp  Component.h  ComponentRetriever.h  Design.cpp  Design.h  DesignError.cpp  DesignError.h  LayerChangeApplication.cpp  LayerChangeApplication.h  LayerInstance.cpp  LayerInstance.h  OctopusFile.cpp  OctopusFile.h  ResourceBase.h  layer-change-apply.cpp  layer-change-apply.h  octopus-api-helpers.cpp  octopus-api-helpers.h
ode-logic/ode/render-assembly/: Facets.cpp  Facets.h  Facets.hpp  assembly.cpp  assembly.h  graph-transform.cpp  graph-transform.h
ode-logic/ode/render-expressions/: RenderExpression.cpp  RenderExpression.h  render-expressions.h  render-operations.cpp  render-operations.h
ode-logic/ode/text-renderer/: FontBase.cpp  FontBase.h  text-renderer-instance.cpp  text-renderer-instance.h  text-renderer.h
ode-logic/ode/textify/: FontBase.cpp  FontBase.h  textify-instance.cpp  textify-instance.h  textify.h
ode-media/: CMakeLists.txt  ode-media.h
ode-media/ode/: image-io.cpp  image-io.h
ode-media/ode/image-formats/: gif.cpp  gif.h  jpeg.cpp  jpeg.h  png.cpp  png.h  rgba.cpp  rgba.h  tiff.cpp  tiff.h  webp.cpp  webp.h
ode-napi/: CMakeLists.txt  README.md  addon.cpp  addon.h  api-base.cpp  gen-api-base.cpp  gen-api-base.h  gen-logic-api.cpp  gen-logic-api.h  gen-renderer-api.cpp  gen-renderer-api.h  gen.h  generate-api-bindings.py  logic-api.cpp  manual-api-base.cpp  manual-api-base.h  manual-logic-api.cpp  manual-logic-api.h  napi-base.h  napi-utils.cpp  napi-utils.h  napi-wrap.h  napi-wrap.hpp  ode-napi-module.cpp  test.js  try-importing-prebuilt.mjs
ode-napi/every-package/: common.d.ts  exports.d.ts  internal.d.ts  manual.d.ts  predefined.d.ts
ode-napi/native-package/: index.js  package.json
ode-napi/typescript-bindings/: api-base.d.ts  common.d.ts  index.d.ts  logic-api.d.ts  ode.js  renderer-api.d.ts
ode-napi/wasm-package/: index.js  package.json
ode-napi/wrapper-package/: node.js  package.json
ode-napi/wrapper-package-local/: package.json
ode-napi/wrapper-package-test/: node.js  package.json  wasm.js
ode-rasterizer/: CMakeLists.txt  ode-rasterizer.h
ode-rasterizer/ode/: Rasterizer.cpp  Rasterizer.h
ode-renderer/: CMakeLists.txt  main.cpp  ode-renderer.h
ode-renderer/ode/: emscripten-bindings.cpp  renderer-api.cpp  renderer-api.h
ode-renderer/ode/frame-buffer-management/: TextureFrameBuffer.cpp  TextureFrameBuffer.h  TextureFrameBufferManager.cpp  TextureFrameBufferManager.h
ode-renderer/ode/image/: BitmapImage.cpp  BitmapImage.h  Image.cpp  Image.h  ImageBase.cpp  ImageBase.h  PlacedImage.h  TextureImage.cpp  TextureImage.h
ode-renderer/ode/optimized-renderer/: EffectRenderer.cpp  EffectRenderer.h  GradientTexture.cpp  GradientTexture.h  RenderContext.cpp  RenderContext.h  Renderer.cpp  Renderer.h  TransformShader.h  process-asset-bitmap.cpp  process-asset-bitmap.h  render.cpp  render.h
ode-renderer/ode/text-renderer/: ColorFontAtlas.cpp  ColorFontAtlas.h  FontAtlas.cpp  FontAtlas.h  GlyphQuad.h  TextMesh.cpp  TextMesh.h  TextRenderer.cpp  TextRenderer.h
tests/renderer-output-tests/: CMakeLists.txt
tests/renderer-output-tests/src/: basic-rendering-output.cpp  main.cpp
tests/renderer-unit-tests/: CMakeLists.txt
tools/animation-prototype/: CMakeLists.txt  window-main.cpp
tools/design-editor/: CMakeLists.txt  README.md  main.cpp
tools/render-graph-inspector/: CMakeLists.txt  main.cpp
(+149 files in other folders)
